--- a/Transparency-One/app/src/main/res/layout/activity_main.xml
+++ b/Transparency-One/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="Transparency-one"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -10,23 +11,49 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.oussa.transparency_one.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="My Supply Chains"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textView" />
-
-    <ListView
-        android:id="@+id/listView"
+    <TabHost
+        android:id="@+id/tabhost"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView"
-        android:layout_marginTop="22dp" />
+        android:layout_margin="10dp"
+        android:background="@android:color/white">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <!-- tab N°1 --> <!-- Inclusion of the interface -->
+                <include
+                    android:id="@+id/i_layout_1"
+
+                    layout="@layout/received_requests"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+                <!-- tab N°2 --> <!-- Inclusion of the interface -->
+                <include
+                    android:id="@+id/i_layout_2"
+                    layout="@layout/sent_requests"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                <!-- tab N°3 --> <!-- Inclusion of the interface -->
+                <include
+                    android:id="@+id/i_layout_3"
+                    layout="@layout/updates"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </FrameLayout>
+
+        </LinearLayout>
+    </TabHost>
 
 </RelativeLayout>
