--- a/Transparency-One/app/src/main/res/values/styles.xml
+++ b/Transparency-One/app/src/main/res/values/styles.xml
@@ -6,6 +6,15 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:actionButtonStyle">@style/MyActionButtonStyle</item>
+        <item name="actionButtonStyle">@style/MyActionButtonStyle</item>
+
     </style>
 
+    <style name="MyActionButtonStyle" parent="Widget.AppCompat.ActionBar">
+        <item name="android:width">24dp</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:height">56dp</item>
+    </style>
 </resources>
