--- a/Transparency-One/app/src/main/res/layout/request_details.xml
+++ b/Transparency-One/app/src/main/res/layout/request_details.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="Transparency-one"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    >
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.example.oussa.transparency_one.MainActivity">
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/supplierName"
-        android:id="@+id/checkBox" />
+    <ImageView
+        android:contentDescription="row"
+        android:id="@+id/picture"
+        android:layout_width="60dp"
+        android:layout_height="60dp">
+    </ImageView>
+
 
     <TextView
         android:id="@+id/productName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="70dp"
         android:textColor="@android:color/black"
         android:textStyle="bold"
         tools:text="Source 1" />
@@ -25,6 +32,7 @@
         android:id="@+id/supplierName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="70dp"
         android:textColor="@android:color/black"
         android:layout_alignLeft="@+id/productName"
         android:layout_below="@+id/productName"
@@ -34,10 +42,9 @@
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/supplierName"
+        android:layout_alignBottom="@+id/productName"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="32dp"
         android:id="@+id/creationDate" />
-
 
 </RelativeLayout>
