--- a/Transparency-One/app/src/main/res/values/styles.xml
+++ b/Transparency-One/app/src/main/res/values/styles.xml
@@ -17,4 +17,13 @@
         <item name="android:layout_margin">5dp</item>
         <item name="android:height">56dp</item>
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
