--- a/Transparency-One/app/src/main/res/layout/activity_main.xml
+++ b/Transparency-One/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.oussa.transparency_one.MainActivity">
+    tools:context="com.example.oussa.transparency_one.Activities.MainActivity">
 
     <TabHost
         android:id="@+id/tabhost"
