--- a/Transparency-One/app/src/main/res/drawable/business_tabs_indicator_background.xml
+++ b/Transparency-One/app/src/main/res/drawable/business_tabs_indicator_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Active tab -->
-    <item android:drawable="@android:color/holo_blue_bright" android:state_focused="false" android:state_pressed="false" android:state_selected="true" />
+    <item android:color="@android:color/holo_blue_bright" android:state_focused="false" android:state_pressed="false" android:state_selected="true" />
     <!-- Inactive tab -->
     <item android:drawable="@android:color/white" android:state_focused="false" android:state_pressed="false" android:state_selected="false" />
     <!-- Pressed tab -->
