--- a/Transparency-One/app/src/main/res/layout/activity_main.xml
+++ b/Transparency-One/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,8 @@
         android:id="@+id/tabhost"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:background="@android:color/white">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
 
         <LinearLayout
             android:layout_width="match_parent"
