--- a/Transparency-One/app/src/main/res/layout/row_sent.xml
+++ b/Transparency-One/app/src/main/res/layout/row_sent.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    >
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="20.83dp"
+    android:paddingBottom="20.83dp">
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -16,7 +18,7 @@
         android:id="@+id/productName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="70dp"
         android:textColor="@android:color/black"
         android:textStyle="bold"
         tools:text="Source 1" />
@@ -34,9 +36,9 @@
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/supplierName"
+        android:layout_alignBottom="@+id/productName"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="10dp"
         android:id="@+id/creationDate" />
 
 
