--- a/Transparency-One/app/src/main/res/layout/sent_requests.xml
+++ b/Transparency-One/app/src/main/res/layout/sent_requests.xml
@@ -6,24 +6,14 @@
     android:background="@android:color/white"
     android:padding="10dp">
 
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:headerDividersEnabled="false"
+        android:layout_marginTop="10dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="80dp"
-        android:layout_above="@+id/button" />
-
-    <Button
-        android:text="Send reminders"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button"
-        tools:height="48dp"
-        android:layout_marginBottom="68dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
