--- a/Transparency-One/app/src/main/res/menu/menu.xml
+++ b/Transparency-One/app/src/main/res/menu/menu.xml
@@ -1,6 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:title="Send reminder"
+    <item
+        android:id="@+id/send_reminder"
+        android:title="Send reminder"
         android:checkable="false" />
 </menu>
