--- a/Transparency-One/app/src/main/res/layout/activity_chose_visibility.xml
+++ b/Transparency-One/app/src/main/res/layout/activity_chose_visibility.xml
@@ -15,13 +15,12 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:layout_column="0"
             android:text="Select visibility level"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/pageTitle"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:layout_margin="5dp" />
+            android:textStyle="bold"
+            android:layout_marginTop="20dp"
+            android:textSize="17sp" />
 
         <ListView
             android:id="@+id/visibilitiesListView"
