--- a/Transparency-One/app/src/main/res/layout/activity_request_detail.xml
+++ b/Transparency-One/app/src/main/res/layout/activity_request_detail.xml
@@ -9,6 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#fff"
     tools:context="com.example.oussa.transparency_one.Activities.MainActivity">
 
     <LinearLayout
@@ -69,7 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:textSize="17sp" />
 
         <ListView
