--- a/Transparency-One/app/src/main/res/layout/row_visibilitylevel.xml
+++ b/Transparency-One/app/src/main/res/layout/row_visibilitylevel.xml
@@ -5,21 +5,11 @@
     android:layout_height="match_parent"
     android:padding="10dp">
 
-    <ImageView
-        android:contentDescription="row"
-        android:id="@+id/picture"
-        android:layout_width="60dp"
-        android:layout_height="60dp">
-    </ImageView>
-
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="19dp"
-        android:layout_marginLeft="70dp"
         android:textColor="@android:color/black"
-        android:textStyle="bold"
-        tools:text="Source 1" />
+        android:textStyle="bold" />
 
 </RelativeLayout>
