add source to component Activity

--- a/Transparency-One/app/src/main/res/layout/activity_components.xml
+++ b/Transparency-One/app/src/main/res/layout/activity_components.xml
@@ -16,7 +16,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:text="Select a component"
+            android:text="Cotton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
