--- a/Transparency-One/app/src/main/res/layout/row_source.xml
+++ b/Transparency-One/app/src/main/res/layout/row_source.xml
@@ -12,4 +12,20 @@
         android:textColor="@android:color/black"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/supplierName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:layout_alignLeft="@+id/name"
+        android:layout_below="@+id/name" />
+
+    <ImageView
+        android:id="@+id/picture"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="5dp"
+        android:layout_alignParentEnd="true">
+    </ImageView>
+
 </RelativeLayout>
